responsive on mobile

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
 
-    <nav class="navbar fixed-bottom navbar-light bg-faded">
+    <div class="footer">
         <div class="col-md-12 col-xs-12" align="center">
             <a target="_blank" href="https://www.linkedin.com/in/tien-pham-minh/">
                 <i id="social-fb" class="fab fa-linkedin fa-3x social"></i>
@@ -129,7 +129,7 @@
             </a>
         </div>
 
-    </nav>
+    </div>
     </div>
    
     <script type="text/javascript" src="particles.js"></script>
